整理前端代码

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Simple DataChannel</title>
         <link rel="stylesheet" media="screen" href="stylesheets/main.css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
     </head>
     <body>
     	<button id="ws-connect">Connect to WebSocket</button>
