--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,208 +1,233 @@
 <html>
-    <head>
-        <title>Simple DataChannel</title>
-        <link rel="stylesheet" media="screen" href="stylesheets/main.css">
-        <script src="js/jquery.min.js"></script>
-    </head>
-    <body>
-    	<button id="ws-connect">Connect to WebSocket</button>
-        
-        <form id="idform" action="">
-            <input type="text" id="user" placeholder="e.g. Alice">
-            <button id="setid">Set your name</button>
-        </form>
-        <form id="dcform" action="">
-            <input type="text" id="connectTo" placeholder="e.g. Bob">
-            <button id="dc-connect">Connect to</button>
-        </form>
-        <form id="sendform" action="">
-            <input type="text" id="message">
-            <button id="send">Send Text over DataChannel</button>
-        </form>
-    </body>
 
-    <script>
+<head>
+    <title>Simple DataChannel</title>
+    <script src="js/jquery.min.js"></script>
+</head>
 
-    $("#idform").hide();
-    $("#dcform").hide();
-    $("#sendform").hide();
+<body>
+    <form id="idform" action="" onsubmit="return false;">
+        <input type="text" id="name">
+        <button id="set_name">Set your name</button>
+    </form>
 
-    $("#idform").submit(setMyId);
-    $("#dcform").submit(connectTo);
-    $("#sendform").submit(sendDirect);
+    <button id="ws-connect">Connect to WebSocket</button>
+    <button id="ws-disconnect">Disconnect</button>
+    <br>
+    <br>
+    <br>
 
-    $("#setid").click(setMyId);
-    $("#dc-connect").click(connectTo);
-    $("#send").click(sendDirect);
+    <div>
+        name: <span id="msg_name"></span><br>
+        host: <span id="msg_host"></span><br>
+        prot: <span id="msg_prot"></span><br>
+    </div>
+    <br>
+
+    <div>
+        log:
+        <button onclick="$('#log_content').html('');">clear</button>
+        <div id="log_content"></div>
+    </div>
+</body>
+
+<script>
+
+    function addlog(msg) {
+        t = $('#log_content').html();
+        t += msg + "<br>"
+        $('#log_content').html(t);
+    }
+
+    var host = window.location.host;
+    var is_sec = window.location.protocol == "https:"
+
+    $("#msg_host").html(host);
+    $("#msg_prot").html(is_sec ? "https" : "http");
+
 
     var ws = null;
-    var user = "";
-    var user2 = "";
-
-    $("#ws-connect").click(function(){
-        ws = new WebSocket("wss://localhost/api/ws");
-
-        ws.onopen = function(e){    
-            console.log("Websocket opened");
-            $("#idform").show();
+    var name = "";
+    $("#set_name").click(function () {
+        if(ws){
+            alert("disconnect first!");
+            return
         }
-        ws.onclose = function(e){   
-            console.log("Websocket closed");
+        name = $("#name").val()
+        $("#msg_name").html(name);
+        addlog("set name: "+name);
+    });
+    $("#ws-connect").click(function () {
+        if (ws)
+            return;
+
+        u = ""
+        if (is_sec)
+            u = "wss://" + host + "/api/ws"
+        else
+            u = "ws://" + host + "/api/ws"
+        addlog("connect to " + u);
+        ws = new WebSocket(u);
+
+        ws.onopen = function (e) {
+            addlog("Websocket opened");
         }
-        ws.onmessage = function(e){ 
+        ws.onclose = function (e) {
+            addlog("Websocket closed");
+        }
+        ws.onmessage = function (e) {
             console.log("Websocket message received: " + e.data);
-
             var json = JSON.parse(e.data);
 
-            if(json.action == "candidate"){
-                if(json.to == user){
-                  processIce(json.data);
+            if (json.action == "candidate") {
+                if (json.to == user) {
+                    processIce(json.data);
                 }
-            } else if(json.action == "offer"){
+            } else if (json.action == "offer") {
                 // incoming offer
-                if(json.to == user){
+                if (json.to == user) {
                     user2 = json.from;
                     processOffer(json.data)
                 }
-            } else if(json.action == "answer"){
+            } else if (json.action == "answer") {
                 // incoming answer
-                if(json.to == user){
+                if (json.to == user) {
                     processAnswer(json.data);
                 }
-            } 
-            // else if(json.action == "id"){
-            //    userId = json.data;
-            // } else if(json.action=="newUser"){
-            //     if(userId!=null && json.data!=userId){
-
-            //     }
-            // }
-
+            }
         }
-        ws.onerror = function(e){   
-            console.log("Websocket error");
+        ws.onerror = function (e) {
+            addlog("Websocket error");
         }
     });
+    $("#ws-disconnect").click(function () {
+        if (!ws)
+            return;
+        ws.close();
+        ws = null;
+    })
 
-    function setMyId(e){
-        e.preventDefault();
-        user = $("#user").val();
-        $("#dcform").show();
-        return false;
-    }
+    // function setMyId(e) {
+    //     e.preventDefault();
+    //     user = $("#user").val();
+    //     $("#dcform").show();
+    //     return false;
+    // }
 
-     var config = {};
-    var connection = {};
+    // var config = {};
+    // var connection = {};
 
-    var peerConnection;
-    var dataChannel;
-
-
-
-    function connectTo(e){
-        e.preventDefault();
-        user2 = $("#connectTo").val();
-        openDataChannel();
-
-        var sdpConstraints = { offerToReceiveAudio: true,  offerToReceiveVideo: false }
-        peerConnection.createOffer(sdpConstraints).then(function (sdp) {
-            peerConnection.setLocalDescription(sdp);
-            sendNegotiation("offer", sdp);
-            console.log("------ SEND OFFER ------");
-        }, function (err) {
-            console.log(err)
-        });
-
-    }
-
-    function sendDirect(e){
-        e.preventDefault();
-        dataChannel.send($("#message").val());
-        $('body').append('Me: <div class="message">'+$("#message").val()+'</div>');
-        console.log("Sending over datachannel: " + $("#message").val());
-        $("#message").val('');
-    }
-
-    function getURLParameter(name) {
-    return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search)||[,""])[1].replace(/\+/g, '%20'))||null
-    }
+    // var peerConnection;
+    // var dataChannel;
 
 
-    function openDataChannel (){
-        peerConnection = new webkitRTCPeerConnection(config, connection);
-        peerConnection.onicecandidate = function(e){
-            if (!peerConnection || !e || !e.candidate) return;
-            var candidate = event.candidate;
-            sendNegotiation("candidate", candidate);
-        }
 
-        dataChannel = peerConnection.createDataChannel("datachannel", {reliable: false});
+    // function connectTo(e) {
+    //     e.preventDefault();
+    //     user2 = $("#connectTo").val();
+    //     openDataChannel();
 
-        dataChannel.onopen = function(){
-            console.log("------ DATACHANNEL OPENED ------")
-            $("#sendform").show();
-        };
-        dataChannel.onclose = function(){console.log("------ DC closed! ------")};
-        dataChannel.onerror = function(){console.log("DC ERROR!!!")};
+    //     var sdpConstraints = { offerToReceiveAudio: true, offerToReceiveVideo: false }
+    //     peerConnection.createOffer(sdpConstraints).then(function (sdp) {
+    //         peerConnection.setLocalDescription(sdp);
+    //         sendNegotiation("offer", sdp);
+    //         console.log("------ SEND OFFER ------");
+    //     }, function (err) {
+    //         console.log(err)
+    //     });
 
-        peerConnection.ondatachannel = function (ev) {
-            console.log('peerConnection.ondatachannel event fired.');
-            ev.channel.onopen = function() {
-                console.log('Data channel is open and ready to be used.');
-            };
-            ev.channel.onmessage = function(e){
-                console.log("DC from ["+user2+"]:" +e.data);
-                $('body').append(user2+': <div class="message from">'+e.data+'</div>')
-            }
-        };
+    // }
 
-        return peerConnection
-    }
+    // function sendDirect(e) {
+    //     e.preventDefault();
+    //     dataChannel.send($("#message").val());
+    //     $('body').append('Me: <div class="message">' + $("#message").val() + '</div>');
+    //     console.log("Sending over datachannel: " + $("#message").val());
+    //     $("#message").val('');
+    // }
 
-    function sendNegotiation(type, sdp){
-        var json = { from: user, to: user2, action: type, data: sdp};
-        ws.send(JSON.stringify(json));
-        console.log("Sending ["+user+"] to ["+user2+"]: " + JSON.stringify(sdp));
-    }
+    // function getURLParameter(name) {
+    //     return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [, ""])[1].replace(/\+/g, '%20')) || null
+    // }
 
-    function processOffer(offer){
-        var peerConnection = openDataChannel();
-        peerConnection.setRemoteDescription(new RTCSessionDescription(offer)).catch(e => {
-            console.log(e)
-        });
 
-        var sdpConstraints = {'mandatory':
-            {
-                'OfferToReceiveAudio': false,
-                'OfferToReceiveVideo': false
-            }
-        };
+    // function openDataChannel() {
+    //     peerConnection = new webkitRTCPeerConnection(config, connection);
+    //     peerConnection.onicecandidate = function (e) {
+    //         if (!peerConnection || !e || !e.candidate) return;
+    //         var candidate = event.candidate;
+    //         sendNegotiation("candidate", candidate);
+    //     }
 
-        peerConnection.createAnswer(sdpConstraints).then(function (sdp) {
-            return peerConnection.setLocalDescription(sdp).then(function() {            
-                sendNegotiation("answer", sdp);
-                console.log("------ SEND ANSWER ------");
-            })
-        }, function(err) {
-            console.log(err)
-        });
-        console.log("------ PROCESSED OFFER ------");
+    //     dataChannel = peerConnection.createDataChannel("datachannel", { reliable: false });
 
-    };
+    //     dataChannel.onopen = function () {
+    //         console.log("------ DATACHANNEL OPENED ------")
+    //         $("#sendform").show();
+    //     };
+    //     dataChannel.onclose = function () { console.log("------ DC closed! ------") };
+    //     dataChannel.onerror = function () { console.log("DC ERROR!!!") };
 
-    function processAnswer(answer){
+    //     peerConnection.ondatachannel = function (ev) {
+    //         console.log('peerConnection.ondatachannel event fired.');
+    //         ev.channel.onopen = function () {
+    //             console.log('Data channel is open and ready to be used.');
+    //         };
+    //         ev.channel.onmessage = function (e) {
+    //             console.log("DC from [" + user2 + "]:" + e.data);
+    //             $('body').append(user2 + ': <div class="message from">' + e.data + '</div>')
+    //         }
+    //     };
 
-        peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
-        console.log("------ PROCESSED ANSWER ------");
-        return true;
-    };
+    //     return peerConnection
+    // }
 
-    function processIce(iceCandidate){
-        peerConnection.addIceCandidate(new RTCIceCandidate(iceCandidate)).catch(e => {
-            debugger
-            console.log(e)
-        })
-    }
+    // function sendNegotiation(type, sdp) {
+    //     var json = { from: user, to: user2, action: type, data: sdp };
+    //     ws.send(JSON.stringify(json));
+    //     console.log("Sending [" + user + "] to [" + user2 + "]: " + JSON.stringify(sdp));
+    // }
 
-    </script>
+    // function processOffer(offer) {
+    //     var peerConnection = openDataChannel();
+    //     peerConnection.setRemoteDescription(new RTCSessionDescription(offer)).catch(e => {
+    //         console.log(e)
+    //     });
+
+    //     var sdpConstraints = {
+    //         'mandatory':
+    //         {
+    //             'OfferToReceiveAudio': false,
+    //             'OfferToReceiveVideo': false
+    //         }
+    //     };
+
+    //     peerConnection.createAnswer(sdpConstraints).then(function (sdp) {
+    //         return peerConnection.setLocalDescription(sdp).then(function () {
+    //             sendNegotiation("answer", sdp);
+    //             console.log("------ SEND ANSWER ------");
+    //         })
+    //     }, function (err) {
+    //         console.log(err)
+    //     });
+    //     console.log("------ PROCESSED OFFER ------");
+
+    // };
+
+    // function processAnswer(answer) {
+
+    //     peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
+    //     console.log("------ PROCESSED ANSWER ------");
+    //     return true;
+    // };
+
+    // function processIce(iceCandidate) {
+    //     peerConnection.addIceCandidate(new RTCIceCandidate(iceCandidate)).catch(e => {
+    //         debugger
+    //         console.log(e)
+    //     })
+    // }
+
+</script>
+
 </html>
