--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>PeerChat</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
 </head>
 
 <body>
@@ -36,7 +36,8 @@
 
 </body>
 <script src="./js/lib/adapter.js"></script>
-<script src="./js/lib/socket.io.min.js"></script>
+<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script src='./js/room.js'></script>
 
 </html>
