--- a/src/public/lobby.html
+++ b/src/public/lobby.html
@@ -6,7 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>PeerChat</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/css/lobby.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/lobby.css'>
 </head>
 
 <body>
