js语句执行顺序需要处理

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -28,8 +28,10 @@
   </div> -->
 
 </body>
-<script src="./js/lib/adapter.js"></script>
+<script src="js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='./js/room.js'></script>
+<script src='js/peer.js'></script>
+<script src='js/room-local.js'></script>
+<!-- <script src='js/room.js'></script> -->
 
 </html>
