改为面向过程，开始处理错误

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,7 @@
   <title>考生端</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
+  <link href="#" rel="shortcut icon">
 </head>
 
 <body>
@@ -30,7 +31,8 @@
 </body>
 <script src="js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='js/peer.js'></script>
+<!-- <script src='js/peer.js'></script> -->
+<script src='js/room-peer.js'></script> -->
 <script src='js/room-local.js'></script>
 <!-- <script src='js/room.js'></script> -->
 
