--- a/src/public/remote.html
+++ b/src/public/remote.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>考生端</title>
+  <title>监考端</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
   <link href="#" rel="shortcut icon">
@@ -21,6 +21,6 @@
 <script src="js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script src='js/room-peer.js'></script> -->
-<script src='js/room-local.js'></script>
+<script src='js/room-remote.js'></script>
 
 </html>
