--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,11 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
   <link href="#" rel="shortcut icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,10 +22,42 @@
     <video class="video-player" id="screenStream" autoplay playsinline></video>
   </div>
 
+  <div id="camera-controls">
+    <button type="button" class="btn btn-primary btn-block" id="btnSystem">开启考试系统</button>
+    <!-- <button type="button" class="btn btn-secondary"></button> -->
+    <!-- <button type="button" class="btn btn-primary btn-block" id="btnCameraOpen">开启摄像头</button>
+    <button type="button" class="btn btn-secondary btn-block" id="btnCameraClose" disabled>关闭摄像头</button> -->
+
+  </div>
+  <br>
+  <div id="screen-controls">
+    <p>本地显示选项: </p>
+    <div class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" id="switchCamera" disabled>
+      <label class="form-check-label" for="flexSwitchCheckDefault">摄像头</label>
+    </div>
+    <div class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" id="switchCameraAudio" disabled>
+      <label class="form-check-label" for="flexSwitchCheckDefault">麦克风音频</label>
+    </div>
+    
+    <!-- <button type="button" class="btn btn-primary btn-block" id="btnScreenOpen">开启屏幕共享</button>
+    <button type="button" class="btn btn-secondary btn-block" id="btnScreenClose" disabled>关闭屏幕共享</button> -->
+    <div class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" id="switchScreen" disabled>
+      <label class="form-check-label" for="flexSwitchCheckDefault">屏幕共享</label>
+    </div>
+    <div class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" id="switchScreenAudio" disabled>
+      <label class="form-check-label" for="flexSwitchCheckDefault">电脑音频</label>
+    </div>
+  </div>
+
 </body>
 <script src="js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='js/room-peer.js'></script> -->
+<script src='js/room-peer.js'></script>
 <script src='js/room-local.js'></script>
+<script src='js/script-local.js'></script>
 
 </html>
