开关无法触发ontrack事件

--- a/src/public/remote.html
+++ b/src/public/remote.html
@@ -20,7 +20,7 @@
 </body>
 <script src="js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='js/room-peer.js'></script> -->
+<script src='js/room-peer.js'></script>
 <script src='js/room-remote.js'></script>
 
 </html>
